--- a/src/pages/clientsheet.page
+++ b/src/pages/clientsheet.page
@@ -1,9 +1,9 @@
 <!--Vf-page for client use.-->
 <apex:page controller="CountSheetCtrl" tabStyle="clientsheet__tab">
-  <apex:sectionHeader title="Store"/>
+  <apex:sectionHeader title="{!$Label.Save_Label}"/>
   <apex:form >
     <c:LoadingComp />
-    <apex:pageBlock mode="detail" title="Merchandise">
+    <apex:pageBlock mode="detail" title="{!$Label.Merchandise_Label}">
       <apex:pageBlockTable id="recordTable" value="{!products}" var="product">
         <apex:column >
           <!--"Make order". Goes to the NewOrder vf-page.-->
@@ -12,16 +12,16 @@
             <apex:param value="{!product.Id}" name="recordId" assignTo="{!recordId}"/>
           </apex:commandLink>
         </apex:column>
-        <apex:column width="200" headerValue="Product">
+        <apex:column width="200" headerValue="{!$Label.Product_Column}">
           <!--View details of the product.-->
           <apex:outputLink target="_blank" value="/{!product.Id}" >
             {!product.Name}
           </apex:outputLink>
         </apex:column>
-        <apex:column headerValue="Physical Count">
+        <apex:column headerValue="{!$Label.Physical_Count_Column}">
           <apex:outputField value="{!product.Quantity__c}"/>
         </apex:column>
-        <apex:column headerValue="Price">
+        <apex:column headerValue="{!$Label.Price_Column}">
           <apex:outputField value="{!product.Price__c}"/>
         </apex:column>
       </apex:pageBlockTable>
