--- a/src/pages/NewOrder.page
+++ b/src/pages/NewOrder.page
@@ -6,28 +6,28 @@
         <apex:pageBlock title="{!$Label.Order_Name} - {!selectedProduct.Name}"  mode="edit">
             <apex:pageBlockButtons >
                 <!--Saves the order.-->
-                <apex:commandButton status="loadStatus" action="{!save}" value="Save"
+                <apex:commandButton status="loadStatus" action="{!save}" value="{!$Label.Save_Label}"
                                     reRender="messages" />
             </apex:pageBlockButtons>
-			<apex:pageBlockSection title="Enter new order" columns="2">
+			<apex:pageBlockSection title="{!$Label.Enter_New_Order}" columns="2">
                 <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="First Name"/>
+                    <apex:outputLabel value="{!$Label.First_Name}"/>
                     <apex:inputField required="true"  value="{!newContact.FirstName}" 
                         id="firstname"/>
                 </apex:pageBlockSectionItem>
                     <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="Last Name"/>
+                    <apex:outputLabel value="{!$Label.Last_Name}"/>
                     <apex:inputField required="true"  value="{!newContact.LastName}" 
                         id="lastname"/>
                 </apex:pageBlockSectionItem>
                 <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="Email"/>
-                    <apex:inputField required="true" label="Email" value="{!newContact.Email}"
+                    <apex:outputLabel value="{!$Label.Email_Label}"/>
+                    <apex:inputField required="true" value="{!newContact.Email}"
                                      id="email"/>
                 </apex:pageBlockSectionItem>
                 <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="Quantity"/>
-                    <apex:inputField label="Quantity" value="{!newLineItem.Quantity__c}"
+                    <apex:outputLabel value="{!$Label.Quantity_Label}"/>
+                    <apex:inputField value="{!newLineItem.Quantity__c}"
                                      id="Quantity"/>
                 </apex:pageBlockSectionItem>
             </apex:pageBlockSection>
