--- a/src/pages/NewProduct.page
+++ b/src/pages/NewProduct.page
@@ -3,25 +3,25 @@
 	<apex:form >
         <c:LoadingComp />
         <apex:pageMessages id="messages"/>
-        <apex:pageBlock title="New Record" mode="edit">
+        <apex:pageBlock title="{!$Label.New_Record}" mode="edit">
             <apex:pageBlockButtons >
                 <!--Adds the product.-->
-                <apex:commandButton status="loadStatus" action="{!save}" value="Save" 
+                <apex:commandButton status="loadStatus" action="{!save}" value="{!$Label.Save_Label}" 
                     reRender="messages" />
             </apex:pageBlockButtons>
-			<apex:pageBlockSection title="Enter new record" columns="2">
+			<apex:pageBlockSection title="{!$Label.Enter_New_Record}" 
+                                        columns="2">
                 <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="Name"/>
+                    <apex:outputLabel value="{!$Label.Name_Label}"/>
                     <apex:inputField required="true"  value="{!newRecord.Name}" id="name"/>
                 </apex:pageBlockSectionItem>
                 <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="Quantity"/>
-                    <apex:inputField label="Quantity" value="{!newRecord.Quantity__c}" 
-                        id="quantity"/>
+                    <apex:outputLabel value="{!$Label.Quantity_Label}"/>
+                    <apex:inputField value="{!newRecord.Quantity__c}" id="quantity"/>
                 </apex:pageBlockSectionItem>
                 <apex:pageBlockSectionItem >
-                    <apex:outputLabel value="Price"/>
-                    <apex:inputField label="Price" value="{!newRecord.Price__c}" id="price"/>
+                    <apex:outputLabel value="{!$Label.Price_Column}"/>
+                    <apex:inputField value="{!newRecord.Price__c}" id="price"/>
                 </apex:pageBlockSectionItem>
             </apex:pageBlockSection>
         </apex:pageBlock>
