--- a/src/pages/NewProduct.page
+++ b/src/pages/NewProduct.page
@@ -1,6 +1,9 @@
 <!--Vf-page for adding a new product.-->
 <apex:page controller="NewProductCtrl">
-	<apex:form >
+<apex:includeScript value="{!URLFOR($Resource.JQuery, 'jquery.js')}"/>
+<!--Makes the form appear slowly.-->
+<apex:includeScript value="{!URLFOR($Resource.FadeIn, 'fadeIn.js')}"/>
+    <apex:form id="form" styleClass="fade">
         <c:LoadingComp />
         <apex:pageMessages id="messages"/>
         <apex:pageBlock title="{!$Label.New_Record}" mode="edit">
